# nodeEditor

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  concepts.md  ref.md
src/: CMakeLists.txt  main.cpp
src/mapgen/: Application.cpp  Application.h  application.cpp  application.h  bounds.hpp  constants.h  context.hpp  main.cpp  mapmaker.cpp  mapmaker.h  operator.cpp  operator.h  quadshader.h  renders.cpp  renders.h  scene.cpp  scene.h  serializer.cpp  serializer.h  settings.cpp  settings.h  shader.cpp  shader.h  util.cpp  util.h  util.hpp  window.cpp  window.h
src/mapgen/gl/: ComputeShaderOperator.cpp  ComputeShaderOperator.h  Context.hpp  ConvolveKernel.cpp  ConvolveKernel.h  ConvolveOperator.cpp  PingPongOperator.cpp  RenderSetOperator.cpp  RenderSetOperator.h  SSBO.cpp  Texture.cpp  Texture.h  TextureReader.cpp  TextureReader.h
src/mapgen/interface/: Nodegraph.h  Panel.hpp  Properties.cpp  Properties.h  UI.cpp  UI.h  Viewport.cpp  Viewport.h  ViewportProperties.cpp  ViewportProperties.h  Window.cpp  Window.h  bounds.hpp  nodegraph.cpp  nodegraph.h  nodegraph.hpp  panel.hpp  properties.cpp  properties.h  signal.hpp  ui.cpp  ui.h  viewport.cpp  viewport.h  viewport.hpp  viewproperties.cpp  viewproperties.h  window.cpp  window.h
src/mapgen/nodegraph/: Connector.h  Graph.cpp  Graph.h  GraphElement.cpp  GraphElement.h  Iterators.h  Node.cpp  Node.h  Operator.cpp  OperatorRegistry.hpp  Scene.h  Serializer.h  Settings.cpp  Settings.h  connector.cpp  connector.h  graph.cpp  graph.h  graphelement.cpp  graphelement.h  iterators.cpp  iterators.h  node.cpp  node.h
src/mapgen/operators/: Add.glsl  Add.hpp  Bands.glsl  Bands.hpp  CheckerBoard.glsl  CheckerBoard.hpp  Clamp.glsl  Clamp.hpp  Constant.hpp  ConvolveTexture.hpp  Copy.hpp  CopyLayer.hpp  Erosion.hpp  Gaussian.hpp  Gradient.glsl  Gradient.hpp  Invert.hpp  JumpFlood.glsl  JumpFlood.hpp  Load.hpp  Merge.hpp  Multiply.glsl  Multiply.hpp  Normals.hpp  Offset.glsl  Offset.hpp  Perlin.hpp  Pixel.glsl  Pixel.hpp  Power.hpp  Save.hpp  Shuffle.glsl  Shuffle.hpp  Temperature.glsl  Temperature.hpp  VectorBand.glsl  Voronoi.hpp  add.glsl  add.hpp  compute.hpp  (+21 more)
src/mapgen/shaders/: example.fs  invert.fs  posUV.vs  quad.vs  texture.fs
src/mapgen/shaders/compute/: add.glsl  color.glsl  erosion.glsl  invert.glsl  perlin.glsl  voronoi.glsl
src/mapgen/shaders/noise/: perlin.fs  voronoi.fs
src/nodeeditor/: Application.cpp  Application.h  Bounds.hpp  constants.h  log.h
src/nodeeditor/gl/: ContentCreatorComputeShaderOperator.cpp  ContentCreatorComputeShaderOperator.h  ConvolveOperator.cpp  ConvolveOperator.h  PingPongOperator.h  RenderScene.cpp  RenderScene.h  RenderSetOperator.cpp  SSBO.h  Shader.cpp  util.cpp  util.h
src/nodeeditor/interface/: Nodegraph.cpp  Properties.cpp  Properties.h  UI.cpp  UI.h  Viewport.cpp
src/nodeeditor/nodegraph/: Connector.cpp  Graph.cpp  Iterators.cpp  Operator.h  Scene.cpp  Serializer.cpp  Settings.h
src/nodeeditor/operators/: Add.glsl  Add.hpp  CheckerBoard.hpp  Clamp.hpp  Constant.hpp  Convolve.glsl  Erosion.hpp  ExtractLayer.hpp  Gradient.hpp  Invert.hpp  JumpFlood.hpp  Merge.hpp  Multiply.hpp  Normals.glsl  Normals.hpp  Offset.hpp  Perlin.glsl  Perlin.hpp  Pixel.hpp  Power.glsl  Power.hpp  Shuffle.hpp  Temperature.glsl  Temperature.hpp  VectorBand.hpp  Voronoi.hpp
src/nodeeditor/shaders/: posUV.vs  texture.fs
tests/: CMakeLists.txt  test_nodegraph.cpp
